--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "install": "napa robatron/sudoku.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "napa": "^3.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
